[package]
name = "PerthLB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
rand = "0.8.5"
serde = { version="1.0.188",features=["rc","derive"]}
tokio = { version="1.32.0", features = ["full"]}
toml = "0.7.8"


